# calculator_cicd_c-

./: CMakeLists.txt  readme.md
.github/workflows/: ci_cd.yaml
src/: calculator.cpp  calculator.h  main.cpp
tests/: test_calculator.cpp
